@@ -1,5 +1,7 @@
 2010-11-10  Glenn Morris  <rgm@gnu.org>
 
+	* progmodes/octave-mod.el (octave-mark-block): Update for smie change.
+
 	* emulation/edt.el (edt-with-position): New macro.
 	(edt-find-forward, edt-find-backward, edt-find-next-forward)
 	(edt-find-next-backward, edt-sentence-forward, edt-sentence-backward)
